# a2a-adapter

./: CHARTER.md  README.md  a2a_adapter.py  pyproject.toml
a2a_adapter/: __init__.py  adapter.py  bridge.py  models.py  registry.py  transform.py  validator.py
tests/: test_a2a_adapter.py
