[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-adapter"
version = "0.1.0"
description = "I2I ↔ Google A2A protocol bridge — git-native agents join the A2A ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SuperInstance" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["a2a_adapter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
